--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ESummitActivity"
-    android:background="@color/colorLightBlack">
+    android:background="@color/colorWhite">
 
     <!--ImageView
         android:id="@+id/e_summit_icon"
