--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.EventFragment">
+    tools:context=".activities.EventFragment"
+    android:background="@color/transparent">
 
     <TextView
         android:id="@+id/eventname"
@@ -17,29 +18,120 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@color/black_overlay"
+        android:background="@color/colorLightBlack"
         app:layout_constraintTop_toBottomOf="@id/eventname"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="30dp"
+        android:padding="25dp"
         android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/event_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/ic_event_ws"/>
         <TextView
+            android:id="@+id/event_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="@string/event"
-            android:textColor="@color/colorLightBlack"
+            android:layout_below="@+id/event_img"
+            android:textColor="@color/colorWhite"
             android:textSize="20dp"
+            android:layout_centerHorizontal="true"
             android:textAllCaps="true"/>
 
-</LinearLayout>
+</RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/venue_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorWhite"
+        android:elevation="1dp"
+        app:layout_constraintTop_toTopOf="@id/venue_layout"
+        app:layout_constraintBottom_toBottomOf="@+id/venue_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:cardCornerRadius="5dp"/>
+
+    <LinearLayout
+        android:id="@+id/venue_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp"
+        android:padding="30dp"
+        android:elevation="2dp"
+        app:layout_constraintTop_toBottomOf="@id/event"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <TextView
+            android:id="@+id/date_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date: 2019-07-29 | Time: 10:00am"
+            android:textColor="@color/colorLightBlack"
+            android:textSize="22dp"
+            android:layout_marginBottom="5dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerHorizontal="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Venue: "
+                    android:textColor="@color/colorLightBlack"
+                    android:textSize="22sp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_placeholder"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TBD"
+                    android:textColor="@color/colorLightBlack"
+                    android:textSize="20sp"/>
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/venue_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+            android:id="@+id/event_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Here event discription will be placed and shown like in thi example "
+            android:textColor="@color/colorLightBlack"
+            android:textSize="18dp" />
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
