--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -7,24 +7,54 @@
     tools:context=".activities.EventFragment"
     android:background="@color/transparent">
 
-    <TextView
-        android:id="@+id/eventname"
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="1.0" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/event_bg" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/guideline">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/event_bghills"
+            android:layout_marginLeft="-40dp"
+            android:layout_marginRight="-40dp"
+            android:layout_marginBottom="-5dp"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/nameevent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/event"
-        android:textSize="35sp"
-        android:textColor="@color/colorLightBlack"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#fff"
+        android:textSize="60sp"
+        android:textAllCaps="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
     <RelativeLayout
         android:id="@+id/event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@color/colorLightBlack"
-        app:layout_constraintTop_toBottomOf="@id/eventname"
+        app:layout_constraintTop_toBottomOf="@id/nameevent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:padding="25dp"
@@ -58,8 +88,8 @@
         android:elevation="1dp"
         app:layout_constraintTop_toTopOf="@id/venue_layout"
         app:layout_constraintBottom_toBottomOf="@+id/venue_layout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/venue_layout"
+        app:layout_constraintRight_toRightOf="@id/venue_layout"
         app:cardCornerRadius="5dp"/>
 
     <LinearLayout
@@ -68,7 +98,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="40dp"
-        android:padding="30dp"
+        android:padding="18dp"
         android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@id/event"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -81,6 +111,8 @@
             android:text="Date: 2019-07-29 | Time: 10:00am"
             android:textColor="@color/colorLightBlack"
             android:textSize="22dp"
+            android:maxLines="1"
+            android:autoSizeTextType="uniform"
             android:layout_marginBottom="5dp"/>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -98,7 +130,7 @@
                     android:layout_height="match_parent"
                     android:text="Venue: "
                     android:textColor="@color/colorLightBlack"
-                    android:textSize="22sp"/>
+                    android:textSize="24sp"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -107,11 +139,12 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginTop="8dp"/>
                 <TextView
+                    android:id="@+id/event_venue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TBD"
                     android:textColor="@color/colorLightBlack"
-                    android:textSize="20sp"/>
+                    android:textSize="22sp"/>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
@@ -119,19 +152,24 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/venue_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
         <TextView
+
             android:id="@+id/event_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Here event discription will be placed and shown like in thi example "
             android:textColor="@color/colorLightBlack"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="22sp"
+            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
