--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -2,30 +2,42 @@
 <android.support.v7.widget.CardView
     android:id="@+id/spons_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:layout_margin="5dp">
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_margin="10dp">
     <ImageView
         android:id="@+id/spons_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:src="@drawable/ic_hand_shake"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/spons_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="SponsorA"
+            android:textSize="24sp"
+            android:layout_margin="10dp"
+            android:textColor="@color/colorLightBlack"/>
 
         <TextView
             android:id="@+id/spons_type"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Sponsor Type"
+            android:textSize="18sp"
+            android:layout_margin="10dp"
+            android:textColor="@color/black_overlay"/>
 
     </LinearLayout>
 
