--- a/app/src/main/res/drawable/spons_cardbg_4.xml
+++ b/app/src/main/res/drawable/spons_cardbg_4.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#D51F1F"
-        android:endColor="#F2AF6B"/>
+        android:startColor="#9B1AB4"
+        android:endColor="#F26BD3"/>
 
 </shape>
