--- a/app/src/main/res/drawable/spons_cardbg_5.xml
+++ b/app/src/main/res/drawable/spons_cardbg_5.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#D51F1F"
-        android:endColor="#F2AF6B"/>
+        android:startColor="#1F37D5"
+        android:endColor="#6BAFF2"/>
 
 </shape>
