--- a/app/src/main/res/drawable/spons_bgcircle1.xml
+++ b/app/src/main/res/drawable/spons_bgcircle1.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size
-        android:height="200dp"
-        android:width="200dp"/>
-    <solid
-        android:color=" #CBEFFF"/>
-</shape>
+<layer-list  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item >
+        <shape android:shape="rectangle">
+            <size
+                android:height="20dp"
+                android:width="20dp"/>
+            <solid
+                android:color="#CBEFFF"/>
+            <corners android:bottomLeftRadius="20dp"/>
+        </shape>
+    </item>
+</layer-list>
