--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="transparent">#00000000</color>
     <color name="colorLightBlack">#353533</color>
     <color name="border">#FF0000FF</color>
-
+    <color name="associateSponsBlue">#010C54</color>
     <color name="black_overlay">#66000000</color>
 </resources>
