--- a/app/src/main/res/drawable/spons_cardbg_2.xml
+++ b/app/src/main/res/drawable/spons_cardbg_2.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:startColor="#259586"
-        android:endColor="#5FE9BA"/>
+        android:endColor="#5FE9BA"
+        android:angle="45"/>
+    <corners android:radius="7dp"/>
 
 </shape>
