--- a/app/src/main/res/drawable/spons_cardbg_4.xml
+++ b/app/src/main/res/drawable/spons_cardbg_4.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:startColor="#9B1AB4"
-        android:endColor="#F26BD3"/>
-
+        android:endColor="#F26BD3"
+        android:angle="45"/>
+    <corners android:radius="7dp"/>
 </shape>
