--- a/app/src/main/res/layout/activity_sponsors.xml
+++ b/app/src/main/res/layout/activity_sponsors.xml
@@ -8,62 +8,75 @@
 
     <ImageView
         android:id="@+id/spons_bgcircle_5"
-    android:layout_width="1000dp"
-    android:layout_height="1000dp"
+    android:layout_width="950dp"
+    android:layout_height="950dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:src="@drawable/spons_bgcircle5" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_4"
-        android:layout_width="750dp"
-        android:layout_height="750dp"
+        android:layout_width="650dp"
+        android:layout_height="650dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/spons_bgcircle4" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_3"
-        android:layout_width="550dp"
-        android:layout_height="550dp"
+        android:layout_width="450dp"
+        android:layout_height="450dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/spons_bgcircle3" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_2"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/spons_bgcircle2" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/spons_bgcircle1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="15dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:background="@color/associateSponsBlue"
+        android:layout_height="0dp"
         android:alpha="0.4"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:background="@color/associateSponsBlue"
+        app:layout_constraintBottom_toBottomOf="@+id/tab"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/text_spons"
+        android:textSize="40sp"
+        android:textColor="@color/colorWhite"
+        android:textAllCaps="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/associateSponsBlue"
+        android:layout_marginTop="75dp"
         android:alpha="0.4"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+        android:background="@color/transparent"
+        app:tabBackground="@color/transparent"
+        app:tabRippleColor="@color/common_google_signin_btn_text_dark_disabled"
+        app:tabTextColor="@color/colorWhite"
+        app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
