--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -2,10 +2,17 @@
 <android.support.v7.widget.CardView
     android:id="@+id/spons_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="@color/colorPrimaryDark"
-    android:layout_margin="5dp">
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
+    app:cardCornerRadius="7dp"
+    app:cardElevation="10dp"
+    app:cardBackgroundColor="@color/black_overlay">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -19,7 +26,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="5dp">
 
         <TextView
             android:id="@+id/spons_name"
@@ -27,8 +35,8 @@
             android:layout_height="wrap_content"
             android:text="SponsorA"
             android:textSize="24sp"
-            android:layout_margin="10dp"
-            android:textColor="@color/colorLightBlack"/>
+            android:textColor="@color/colorWhite"
+            android:layout_margin="10dp"/>
 
         <TextView
             android:id="@+id/spons_type"
@@ -36,8 +44,9 @@
             android:layout_height="wrap_content"
             android:text="Sponsor Type"
             android:textSize="18sp"
+            android:textColor="@color/colorWhite"
             android:layout_margin="10dp"
-            android:textColor="@color/black_overlay"/>
+            android:layout_marginTop="5dp"/>
 
     </LinearLayout>
 
