--- a/app/src/main/res/drawable/ic_email.xml
+++ b/app/src/main/res/drawable/ic_email.xml
@@ -1,4 +1,24 @@
-<vector android:height="24dp" android:viewportHeight="490.2"
-    android:viewportWidth="490.2" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M420.95,61.8C376.25,20.6 320.65,0 254.25,0c-69.8,0 -129.3,23.4 -178.4,70.3s-73.7,105.2 -73.7,175c0,66.9 23.4,124.4 70.1,172.6c46.9,48.2 109.9,72.3 189.2,72.3c47.8,0 94.7,-9.8 140.7,-29.5c15,-6.4 22.3,-23.6 16.2,-38.7l0,0c-6.3,-15.6 -24.1,-22.8 -39.6,-16.2c-40,17.2 -79.2,25.8 -117.4,25.8c-60.8,0 -107.9,-18.5 -141.3,-55.6c-33.3,-37 -50,-80.5 -50,-130.4c0,-54.2 17.9,-99.4 53.6,-135.7c35.6,-36.2 79.5,-54.4 131.5,-54.4c47.9,0 88.4,14.9 121.4,44.7s49.5,67.3 49.5,112.5c0,30.9 -7.6,56.7 -22.7,77.2c-15.1,20.6 -30.8,30.8 -47.1,30.8c-8.8,0 -13.2,-4.7 -13.2,-14.2c0,-7.7 0.6,-16.7 1.7,-27.1l18.6,-152.1h-64l-4.1,14.9c-16.3,-13.3 -34.2,-20 -53.6,-20c-30.8,0 -57.2,12.3 -79.1,36.8c-22,24.5 -32.9,56.1 -32.9,94.7c0,37.7 9.7,68.2 29.2,91.3c19.5,23.2 42.9,34.7 70.3,34.7c24.5,0 45.4,-10.3 62.8,-30.8c13.1,19.7 32.4,29.5 57.9,29.5c37.5,0 69.9,-16.3 97.2,-49c27.3,-32.6 41,-72 41,-118.1C488.05,152.9 465.75,103 420.95,61.8zM273.55,291.9c-11.3,15.2 -24.8,22.9 -40.5,22.9c-10.7,0 -19.3,-5.6 -25.8,-16.8c-6.6,-11.2 -9.9,-25.1 -9.9,-41.8c0,-20.6 4.6,-37.2 13.8,-49.8s20.6,-19 34.2,-19c11.8,0 22.3,4.7 31.5,14.2s13.8,22.1 13.8,37.9C290.55,259.2 284.85,276.6 273.55,291.9z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M5.099,190.6C1.8,196.599 0,203.8 0,211v210c0,6.899 1.5,13.5 4.501,19.2L129,315.7L5.099,190.6z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M239.7,337l-12.6,12.9c-18.002,18.002 -46.198,18.002 -64.2,0L150.3,337L25.8,461.499C31.5,464.5 38.101,466 45,466h300c6.899,0 13.5,-1.5 19.2,-4.501L239.7,337z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M345.001,166H45c-6.301,0 -12.599,1.199 -17.999,3.9c154.029,155.758 126.824,128.326 157.5,159c5.4,5.7 15.599,5.7 20.999,0c30.672,-30.67 3.428,-3.199 157.5,-159C357.6,167.199 351.301,166 345.001,166z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M467,46H165c-19.501,0 -36.301,12.599 -42.299,30H407c41.4,0 75,33.6 75,75v192.299c17.401,-6 30,-22.8 30,-42.299V91C512,66.099 491.901,46 467,46z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M407,106H105c-19.501,0 -36.301,12.599 -42.299,30H345c41.4,0 75,33.6 75,75v192.299c17.401,-6 32,-22.8 32,-42.299V151C452,126.099 431.901,106 407,106z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M384.901,190.6L261,315.7l124.499,124.5C388.5,434.5 390,427.899 390,421V211C390,203.8 388.2,196.599 384.901,190.6z"/>
 </vector>
