--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -18,11 +18,23 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_margin="10dp">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/spons_img"
-        android:src="@drawable/ic_hand_shake"
         android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp" />
+        <ImageView
+        android:id="@+id/spons_loading"
+        android:src="@drawable/loading1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
+            />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
