--- a/app/src/main/res/layout/layout_cardview_home.xml
+++ b/app/src/main/res/layout/layout_cardview_home.xml
@@ -13,7 +13,7 @@
         android:scaleY="1"
         android:scaleX="1">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/home_cardbg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             android:background="@color/transparent"
             android:layout_gravity="center">
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -53,9 +53,9 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
