--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.EventFragment"
+    tools:context=".fragments.Event"
     android:background="@color/transparent">
 
     <androidx.constraintlayout.widget.Guideline
